# news-monitor-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.de.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
assets/: demo-source.html
docs/superpowers/plans/: 2026-04-12-safety-limits-demo-assets.md
docs/superpowers/specs/: 2026-04-12-safety-limits-demo-assets-design.md
src/news_monitor_mcp/: __init__.py  server.py
tests/: test_server.py
