[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-monitor-mcp"
version = "0.2.0"
description = "MCP server for global news monitoring via WorldNewsAPI – search, sentiment analysis, top headlines, and media monitoring for Swiss public institutions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "malkreide" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "news",
    "media-monitoring",
    "swiss-open-data",
    "sentiment-analysis",
    "worldnewsapi",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
news-monitor-mcp = "news_monitor_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/news-monitor-mcp"
Repository = "https://github.com/malkreide/news-monitor-mcp"
Issues = "https://github.com/malkreide/news-monitor-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/news_monitor_mcp"]

[tool.hatch.version]
path = "src/news_monitor_mcp/__init__.py"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long — bewusst toleriert (lange Field-Beschreibungen)
    "E701",  # Multiple statements on one line — Codestil im Server bewusst so
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["live: marks tests as requiring live API access (deselect with '-m not live')"]
